Fix order view pan overflow

--- a/admin-dev/themes/new-theme/scss/pages/orders/_orders_view.scss
+++ b/admin-dev/themes/new-theme/scss/pages/orders/_orders_view.scss
@@ -349,6 +349,15 @@
   }
 
   #order-view-page {
+    padding: 0 10px;
+
+    #historyTabContent,
+    #orderProductsPanel {
+      table {
+        overflow: scroll;
+      }
+    }
+
     .card-details {
       &-form {
         width: 100%;
